--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -337,6 +337,7 @@
             <div class="auction-data">
                 <div class="auction-data__table">
                     <div class="auction-data__table_header">
+                        <div class="auction-data__table_header_td">id</div>
                         <div class="auction-data__table_header_td">Описание</div>
                         <div class="auction-data__table_header_td">Версия схемы</div>
                         <div class="auction-data__table_header_td">Версия правила</div>
@@ -347,6 +348,7 @@
                     </div>
                     <div class="auction-data__table_body"></div>
                     <div class="auction-data__table_footer">
+                        <input class="auction-data__table_footer_td empty background-transparent" name="id"/>
                         <input class="auction-data__table_footer_td" name="description"/>
                         <input class="auction-data__table_footer_td" name="schema_version"/>
                         <input class="auction-data__table_footer_td" name="rules_version"/>
