--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -306,7 +306,7 @@
             <div class='content'>
                 <div class="description-without-background-item-1">
                     <div class="description-page">
-                        <p class="text-offset description-about-compeny">Важное о компании</p>
+                        <p class="text-offset description-about-compeny"></p>
                         <ul class="text-offset description-ul-1">
                             <li data-id="1_0">Структура компании</li>
                             <li data-id="1_1">Мы занимаемся</li>
@@ -327,7 +327,7 @@
             <div class='content'>
                 <div class="description-without-background-item-2">
                     <div class="description-page-section-2">
-                        <p class="text-offset description-about-resources">КОРПОРАТИВНАЯ КУЛЬТУРА</p>
+                        <p class="text-offset description-about-resources"></p>
                         <ul class="text-offset description-ul-2">
                             <li data-id="2_0">Обращение к коллегам</li>
                             <li data-id="2_1">Лого, официальные бланки, реквизиты</li>
@@ -348,8 +348,7 @@
             <div class='content'>
                 <div class="description-without-background-item-3">
                     <div class="description-page">
-                        <p class="text-offset description-about-resources description-about-resources-4">ИНФОРМАЦИЯ О
-                            РЕСУРСАХ И ДОКУМЕНТАХ</p>
+                        <p class="text-offset description-about-resources description-about-resources-4"></p>
                         <ul class="text-offset description-ul-3">
                             <li data-id="3_0">Почта</li>
                             <li data-id="3_1">Принтер и сканер</li>
