--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -1,6 +1,7 @@
 <template id="welcomebook">
     <body>
     <div class="welcome__book">
+        <slot name="fer-dialog"></slot>
         <slot name="welcome-header"></slot>
         <slot name="fer-scroll"></slot>
         <slot name="welcome-menu"></slot>
