--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -97,24 +97,24 @@
                 <slot name="welcome-logo"></slot>
             </div>
             <div class="arrow" data-id="top">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="arrow_offset"></span>
+                <span class="arrow_offset"></span>
+                <span class="arrow_offset"></span>
             </div>
             <div class="arrow" data-id="bottom">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="arrow_offset"></span>
+                <span class="arrow_offset"></span>
+                <span class="arrow_offset"></span>
             </div>
             <div class="arrow" data-id="left">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="arrow_offset"></span>
+                <span class="arrow_offset"></span>
+                <span class="arrow_offset"></span>
             </div>
             <div class="arrow" data-id="right">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span class="arrow_offset"></span>
+                <span class="arrow_offset"></span>
+                <span class="arrow_offset"></span>
             </div>
         </div>
 
