--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -361,35 +361,35 @@
         </div>
     </welcome-section>
 
-    <welcome-section
-            data-id="4"
-            slot="welcome-section-4"
-            data-css-shadow="index-cat"
-            data-css-light="index-cat"
-    >
-        <div class='parallax image-backgrorootNodeund'>
-            <img class="image-scale" src='./this/img/pg32.png'/>
-        </div>
-        <img class="image-scale opacity" src='./this/img/pg32.png'/>
-        <div class='teaser'>
-            <div class='content'>
-                <div class="description-without-background-item-2">
-                    <div class="description-page-section-2">
-                        <p class="text-offset description-about-resources"></p>
-                        <template>
-                            <ul class="text-offset description-ul-2">
-                                <li data-id="2_0">Обращение к коллегам</li>
-                                <li data-id="2_1">Лого, официальные бланки, реквизиты</li>
-                                <li data-id="2_2">Программа рекомендаций</li>
-                            </ul>
-                        </template>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </welcome-section>
+<!--    <welcome-section-->
+<!--            data-id="4"-->
+<!--            slot="welcome-section-4"-->
+<!--            data-css-shadow="index-cat"-->
+<!--            data-css-light="index-cat"-->
+<!--    >-->
+<!--        <div class='parallax image-background'>-->
+<!--            <img class="image-scale" src='./this/img/pg32.png'/>-->
+<!--        </div>-->
+<!--        <img class="image-scale opacity" src='./this/img/pg32.png'/>-->
+<!--        <div class='teaser'>-->
+<!--            <div class='content'>-->
+<!--                <div class="description-without-background-item-2">-->
+<!--                    <div class="description-page-section-2">-->
+<!--                        <p class="text-offset description-about-resources"></p>-->
+<!--                        <template>-->
+<!--                            <ul class="text-offset description-ul-2">-->
+<!--                                <li data-id="2_0">Обращение к коллегам</li>-->
+<!--                                <li data-id="2_1">Лого, официальные бланки, реквизиты</li>-->
+<!--                                <li data-id="2_2">Программа рекомендаций</li>-->
+<!--                            </ul>-->
+<!--                        </template>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </welcome-section>-->
 
-    <welcome-section data-id="5" slot="welcome-section-5">
+    <welcome-section data-id="4" slot="welcome-section-4">
         <div class='parallax image-background'>
             <img class="image-scale" src='./this/img/pg5.png'/>
         </div>
