--- a/template/piko/index.html
+++ b/template/piko/index.html
@@ -101,7 +101,7 @@
                 <span class="arrow_offset"></span>
                 <span class="arrow_offset"></span>
             </div>
-            <div class="arrow" data-id="bottom">
+            <div class="arrow rotate_180" data-id="bottom">
                 <span class="arrow_offset"></span>
                 <span class="arrow_offset"></span>
                 <span class="arrow_offset"></span>
@@ -320,16 +320,16 @@
     </welcome-section>
 
     <welcome-section data-id="2" slot="welcome-section-2">
-        <div class='parallax image-background'>
+        <div class='parallax image-backgrorootNodeund'>
             <img class="image-scale" src='./this/img/pg3.png'/>
         </div>
         <img class="image-scale opacity" src='./this/img/pg3.png'/>
         <div class='teaser'>
             <div class='content'>
-                <div class="description-without-background-item-1">
-                    <div class="description-page">
-                        <p class="text-offset description-about-compeny"></p>
-                        <ul class="text-offset description-ul-1">
+                <div class="description-without-background-item-2">
+                    <div class="description-page-section-2">
+                        <p class="text-offset description-about-resources"></p>
+                        <ul class="text-offset description-ul-2">
                             <li data-id="2_0">Обращение к коллегам</li>
                             <li data-id="2_1">Лого, официальные бланки, реквизиты</li>
                             <li data-id="2_2">Программа рекомендаций</li>
@@ -360,6 +360,34 @@
             </div>
         </div>
     </welcome-section>
+
+<!--    <welcome-section-->
+<!--            data-id="4"-->
+<!--            slot="welcome-section-4"-->
+<!--            data-css-shadow="index-cat"-->
+<!--            data-css-light="index-cat"-->
+<!--    >-->
+<!--        <div class='parallax image-background'>-->
+<!--            <img class="image-scale" src='./this/img/pg32.png'/>-->
+<!--        </div>-->
+<!--        <img class="image-scale opacity" src='./this/img/pg32.png'/>-->
+<!--        <div class='teaser'>-->
+<!--            <div class='content'>-->
+<!--                <div class="description-without-background-item-2">-->
+<!--                    <div class="description-page-section-2">-->
+<!--                        <p class="text-offset description-about-resources"></p>-->
+<!--                        <template>-->
+<!--                            <ul class="text-offset description-ul-2">-->
+<!--                                <li data-id="2_0">Обращение к коллегам</li>-->
+<!--                                <li data-id="2_1">Лого, официальные бланки, реквизиты</li>-->
+<!--                                <li data-id="2_2">Программа рекомендаций</li>-->
+<!--                            </ul>-->
+<!--                        </template>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </welcome-section>-->
 
     <welcome-section data-id="4" slot="welcome-section-4">
         <div class='parallax image-background'>
