--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -22,30 +22,6 @@
             <section class='slider parallax-container-off' data-id="4">
                 <slot name="welcome-section-4"></slot>
             </section>
-            <section class='slider parallax-container-off' data-id="5">
-                <slot name="welcome-section-5"></slot>
-            </section>
-            <section class='slider parallax-container-off' data-id="6">
-                <slot name="welcome-section-6"></slot>
-            </section>
-            <section class='slider parallax-container-off' data-id="7">
-                <slot name="welcome-section-7"></slot>
-            </section>
-            <section class='slider parallax-container-off' data-id="8">
-                <slot name="welcome-section-8"></slot>
-            </section>
-            <section class='slider parallax-container-off' data-id="9">
-                <slot name="welcome-section-9"></slot>
-            </section>
-            <section class='slider parallax-container-off' data-id="10">
-                <slot name="welcome-section-10"></slot>
-            </section>
-            <section class='slider parallax-container-off' data-id="11">
-                <slot name="welcome-section-11"></slot>
-            </section>
-            <section class='slider parallax-container-off' data-id="12">
-                <slot name="welcome-section-12"></slot>
-            </section>
         </div>
         <div
                 data-id="1"
@@ -167,20 +143,27 @@
         </div>
         <fer-button
                 slot="button-0"
-                data-id="0"
+                data-id="0__0_0"
+                data-type="welcome-menu"
+                data-css-shadow="menu"
+        >
+            <p>Старт</p>
+        </fer-button>
+        <fer-button
+                slot="button-0"
+                data-id="0__0_1"
                 data-type="welcome-menu"
                 data-css-shadow="menu"
         >
             <p>Приветствие</p>
         </fer-button>
-
         <fer-button
                 slot="button-1"
                 data-id="1"
                 data-type="welcome-menu"
                 data-css-shadow="menu"
         >
-            <p>О компании</p>
+            <p>Важное о компании</p>
 
         </fer-button>
 
@@ -190,7 +173,7 @@
                 data-type="welcome-menu"
                 data-css-shadow="menu"
         >
-            <p>КОРПОРАТИВНАЯ КУЛЬТУРА</p>
+            <p>Корпоративная культура</p>
         </fer-button>
 
         <fer-button
@@ -208,7 +191,7 @@
                 data-type="welcome-menu"
                 data-css-shadow="menu"
         >
-            <p>Спасибо!</p>
+            <p>Спасибо</p>
         </fer-button>
     </welcome-menu>
 
