--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -208,30 +208,22 @@
                     <div class="content">
                         <p class="description-title">Привет!</p>
                         <p class="description-title">Мы рады приветствовать тебя в команде</p>
-                        <h1>Цифромед</h1>
+                        <h1 class="margin--bottom">Цифромед</h1>
                         <div class="description-content">
-                            <p class="description-text">
-                                Мы знаем, что в первое время у тебя может возникнуть масса самых разнообразных вопросов
-                                о
-                                Компании, ее структуре, особенностях организации работы, перспективах роста и многом
-                                другом.
-                                Каждый из нас задавал себе подобные вопросы, когда начинал свою карьеру в Компании и мы
-                                понимаем, как важно получить на них своевременные и полные ответы.
+                            <p class="description-text bold margin--bottom">
+                                Приветствуем тебя в команде Цифромед!
                             </p>
                             <p class="description-text">
-                                Для того, чтобы ты смог быстрее освоиться в нашей Компании и уверенно ориентироваться в
-                                новой
-                                обстановке, мы подготовили Welcome Book. В нем содержится вся необходимая в первые
-                                месяцы
-                                работы
-                                информация, даны ответы на многие важные вопросы и полезные рекомендации по успешному
-                                прохождению испытательного срока и скорейшей адаптации на новом месте.
+                                Для того, чтобы ты смог быстрее освоиться в нашей Компании и уверенно ориентироваться в новой обстановке, мы подготовили этот Welcome Book.
                             </p>
-                            <p class="description-content-end">
-                                Желаем тебе успехов
+                            <p class="description-text">
+                                В нем содержится ключевая информация, необходимая в первые месяцы работы: о Цифромеде, нашей структуре, особенностях организации работы, корпоративных возможностях и полезных контактах.
                             </p>
-                            <p class="description-content-end-last">
-                                и будем рады оказать поддержку в нужную минуту!
+                            <p class="description-text margin--bottom">
+                                Уверены, что после прочтения, ты получишь ответы на многие вопросы!
+                            </p>
+                            <p class="description-text bold">
+                                Желаем успехов и всегда остаемся на связи!
                             </p>
                         </div>
                     </div>
