--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -285,8 +285,13 @@
                         <p class="text-offset description-about-compeny"></p>
                         <ul class="text-offset description-ul-1">
                             <li data-id="1_0">Структура компании</li>
-                            <li data-id="1_1">Мы занимаемся</li>
-                            <li data-id="1_2">Наши ценности</li>
+                            <li data-id="1_1">Единая цифровая платформа</li>
+                            <li data-id="1_2">Наши проекты</li>
+                            <li data-id="1_3">Наши ценности</li>
+                            <li data-id="1_4">График работы</li>
+                            <li data-id="1_5">Дресс-код</li>
+                            <li data-id="1_5">Зарплата и отпуск</li>
+                            <li data-id="1_6">Корпоративные преимущества</li>
                         </ul>
                     </div>
                 </div>
@@ -305,9 +310,9 @@
                     <div class="description-page">
                         <p class="text-offset description-about-compeny"></p>
                         <ul class="text-offset description-ul-1">
-                            <li data-id="2_0">Обращение к коллегам</li>
-                            <li data-id="2_1">Лого, официальные бланки, реквизиты</li>
-                            <li data-id="2_2">Программа рекомендаций</li>
+                            <li data-id="2_0">Внутренняя коммуникация</li>
+                            <li data-id="2_1">Программа рекомендаций</li>
+                            <li data-id="2_2">Корпоративные праздники</li>
                         </ul>
                     </div>
                 </div>
@@ -326,9 +331,8 @@
                     <div class="description-page">
                         <p class="text-offset description-about-resources description-about-resources-4"></p>
                         <ul class="text-offset description-ul-3">
-                            <li data-id="3_0">Почта</li>
-                            <li data-id="3_1">Принтер и сканер</li>
-                            <li data-id="3_2">Техническое оборудование</li>
+                            <li data-id="3_0">Ресурсы и оборудование</li>
+                            <li data-id="3_1">Пропускная система</li>
                         </ul>
                     </div>
                 </div>
